--- a/home_digital_marketing.html
+++ b/home_digital_marketing.html
@@ -1576,15 +1576,15 @@
 											</ul>
 										</div>
 										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
+											<img src="assets/images/team/img_1.jpg" alt="image_not_found">
 										</div>
 										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
-											<span class="admin_title">UI/UX designer</span>
+											<h3 class="admin_name">Rachel John</h3>
+											<span class="admin_title">Business Man</span>
 										</div>
 									</div>
 									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
+										We have found a fantastic team at Hash Media with whom we can depend on to understand our web development strategies and transition them with high-end tactics. They do a beautiful job because they care about the relationship they want to be kept in the mix, as an associate and we place great value in that.
 									</p>
 								</div>
 							</div>
@@ -1602,15 +1602,15 @@
 											</ul>
 										</div>
 										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
+											<img src="assets/images/team/img_2.jpg" alt="image_not_found">
 										</div>
 										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
+											<h3 class="admin_name">Suresh Patel</h3>
 											<span class="admin_title">UI/UX designer</span>
 										</div>
 									</div>
 									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
+										ust to say we are really impressed with the way you have sorted things for us today and the internet seems superfast compared with how it has been. Thank you.
 									</p>
 								</div>
 							</div>
@@ -1628,15 +1628,15 @@
 											</ul>
 										</div>
 										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
+											<img src="assets/images/team/img_3.jpg" alt="image_not_found">
 										</div>
 										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
-											<span class="admin_title">UI/UX designer</span>
+											<h3 class="admin_name">Paul Salliss</h3>
+											<span class="admin_title">Enginer</span>
 										</div>
 									</div>
 									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
+										We have been delighted with the service and support that has been consistently provided by Hash Media. They are incredibly responsive and efficient and we look forward to a long association with Hash Media.
 									</p>
 								</div>
 							</div>
@@ -1654,148 +1654,22 @@
 											</ul>
 										</div>
 										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
+											<img src="assets/images/team/img_4.jpg" alt="image_not_found">
 										</div>
 										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
-											<span class="admin_title">UI/UX designer</span>
+											<h3 class="admin_name">Robert Stephens</h3>
+											<span class="admin_title">Business Man</span>
 										</div>
 									</div>
 									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
+										We are very happy with the service Hash Media provides. They are contactable seven days a week and their response times are excellent, which keeps our down time to a minimum.
 									</p>
 								</div>
 							</div>
 
-							<div class="item">
-								<div class="testimonial_item" data-background="assets/images/shapes/shape_20.png">
-									<div class="admin_wrap mb-30 clearfix">
-										<div class="rating_star ul_li_right">
-											<ul class="clearfix">
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-											</ul>
-										</div>
-										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
-										</div>
-										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
-											<span class="admin_title">UI/UX designer</span>
-										</div>
-									</div>
-									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
-									</p>
-								</div>
-							</div>
+							
 
-							<div class="item">
-								<div class="testimonial_item" data-background="assets/images/shapes/shape_20.png">
-									<div class="admin_wrap mb-30 clearfix">
-										<div class="rating_star ul_li_right">
-											<ul class="clearfix">
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-											</ul>
-										</div>
-										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
-										</div>
-										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
-											<span class="admin_title">UI/UX designer</span>
-										</div>
-									</div>
-									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
-									</p>
-								</div>
-							</div>
-
-							<div class="item">
-								<div class="testimonial_item" data-background="assets/images/shapes/shape_20.png">
-									<div class="admin_wrap mb-30 clearfix">
-										<div class="rating_star ul_li_right">
-											<ul class="clearfix">
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-											</ul>
-										</div>
-										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
-										</div>
-										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
-											<span class="admin_title">UI/UX designer</span>
-										</div>
-									</div>
-									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
-									</p>
-								</div>
-							</div>
-
-							<div class="item">
-								<div class="testimonial_item" data-background="assets/images/shapes/shape_20.png">
-									<div class="admin_wrap mb-30 clearfix">
-										<div class="rating_star ul_li_right">
-											<ul class="clearfix">
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-											</ul>
-										</div>
-										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
-										</div>
-										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
-											<span class="admin_title">UI/UX designer</span>
-										</div>
-									</div>
-									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
-									</p>
-								</div>
-							</div>
-
-							<div class="item">
-								<div class="testimonial_item" data-background="assets/images/shapes/shape_20.png">
-									<div class="admin_wrap mb-30 clearfix">
-										<div class="rating_star ul_li_right">
-											<ul class="clearfix">
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-												<li><i class="fas fa-star"></i></li>
-											</ul>
-										</div>
-										<div class="thumbnail_image">
-											<img src="assets/images/meta/img_1.png" alt="image_not_found">
-										</div>
-										<div class="admin_content">
-											<h3 class="admin_name">Mr. Ridoy Rock</h3>
-											<span class="admin_title">UI/UX designer</span>
-										</div>
-									</div>
-									<p class="mb-0">
-										Why say old chap that is spiffing barney nancy boys bleeder and chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father.
-									</p>
-								</div>
-							</div>
+							
 						</div>
 					</div>
 				</section>
@@ -1809,21 +1683,44 @@
 					<div class="container">
 						<div class="newsletter_boxed bg_gradient_blue deco_wrap" data-aos="fade-up" data-aos-delay="100">
 
-							<div class="row justify-content-center">
-								<div class="col-lg-5 col-md-7">
-
-									<div class="section_title increase_size mb-50">
-										<h2 class="title_text mb-0">Subscribe Newsletter</h2>
-									</div>
-									<form action="#">
-										<div class="form_item">
-											<input type="email" name="email" placeholder="Your email">
-										</div>
-										<button type="submit" class="btn bg_white">Subscribe</button>
-									</form>
-
-								</div>
+							<div class="contact-in">
+								<div class="contact-map">
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14766.882014122231!2d73.19396090000001!3d22.288574899999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395fc5f4affe2ae7%3A0xf3f819f34bcd1b1b!2sE-10%2F4%2F28%2C%20Lakkad%20Pitha%20Rd%2C%20Sultanpura%2C%20Vadodara%2C%20Gujarat%20390001!5e0!3m2!1sen!2sin!4v1595156036532!5m2!1sen!2sin" width="600" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 							</div>
+							<div class="col-md-5 contact">
+								<h2 align="center">Contact Person</h2>
+						  <br>
+					  <div class="screen-reader-response"></div>
+					  <ul class="addressside">
+						 <li>
+							 <strong>Mann Dave</strong>
+						</li>
+						 <li>
+							<i class="fa fa-envelope" aria-hidden="true"></i> E-Mail:
+							  <a href="mailto:manndave252@gmail.com">manndave252@gmail.com </a>
+						 </li>
+						 <li>
+							<i class="fa fa-fw fa-phone" aria-hidden="true"></i>Call:
+						  <a href="#">(+91) 953-770-0270</a>
+						  </li>
+						 <br>
+						  <li>
+							<strong>Nand Patel</strong>
+					   </li>
+						<li>
+							<i class="fa fa-envelope" aria-hidden="true"></i> E-Mail:
+							 <a href="mailto:nandpatel632@gmail.com">nandpatel632@gmail.com </a>
+						</li>
+						<li>
+							<i class="fa fa-fw fa-phone" aria-hidden="true"></i>Call:
+						 <a href="#">(+91) 962-446-7876</a>
+						 <br>
+						 <br>
+						 </li>
+					  </ul>
+						</div><br><br>
+							</div>
+
 
 							<div class="deco_image shape_1">
 								<img src="assets/images/shapes/shape_13.png" alt="shape_not_found">
