--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	
-<!-- Mirrored from droitthemes.com/html/makro/demo/home_digital_marketing.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Jul 2020 18:07:53 GMT -->
+
 <head>
 
 		<meta charset="utf-8">
@@ -108,7 +108,7 @@
 
 						<div class="col-lg-2 col-md-12">
 							<div class="brand_logo">
-								<a href="home_digital_marketing.html" class="brand_link">
+								<a href="home.html" class="brand_link">
 									<img src="assets/images/logo/hashlogo.png" alt="logo_not_found">
 									<!-- <img src="assets/images/logo/logo_7.png" alt="logo_not_found"> -->
 								</a>
@@ -122,7 +122,7 @@
 							<nav class="main_menu ul_li_center clearfix">
 								<ul class="clearfix">
 									<li class="active menu_item_has_child">
-										<a href="home_digital_marketing.html">Home</a>
+										<a href="home.html">Home</a>
 										<!-- <div class="mega_menu">
 											<div class="home_items_submenu">
 												<div class="row">
@@ -163,7 +163,7 @@
 													</div>
 
 													<div class="items_col active">
-														<a href="home_digital_marketing.html" class="page_item">
+														<a href="home.html" class="page_item">
 															<span>
 																<img src="assets/images/pages/home_pages/01_home_5_digital_marketing.jpg" alt="image_not_found">
 															</span>
@@ -372,7 +372,7 @@
 				<div id="mobile_menu" class="mobile_menu">
 
 					<div class="brand_logo mb-50 clearfix">
-						<a href="home_digital_marketing.html" class="brand_link">
+						<a href="home.html" class="brand_link">
 							<img src="assets/images/logo/hashlogo.png" alt="logo_not_found">
 						</a>
 						<span class="close_btn"><i class="fal fa-times"></i></span>
@@ -395,14 +395,14 @@
 
 					<div id="menu_list" class="menu_list ul_li_block mp_balancing mb-50 clearfix">
 						<ul class="clearfix">
-							<li><a href="home_digital_marketing.html">Home</a></li>
+							<li><a href="home.html">Home</a></li>
 							
 								<!-- <ul class="submenu collapse" id="home_submenu" data-parent="#menu_list">
 									<li><a href="home_agency.html">Agency</a></li>
 									<li><a href="home_app_landing.html">App Landing</a></li>
 									<li><a href="home_chat.html">Chat</a></li>
 									<li><a href="home_digital_agency.html">Digital Agency</a></li>
-									<li class="active"><a href="home_digital_marketing.html">Digital Marketing</a></li>
+									<li class="active"><a href="home.html">Digital Marketing</a></li>
 									<li><a href="home_hr_management.html">HR Management</a></li>
 									<li><a href="home_payment.html">Payment</a></li>
 									<li><a href="home_project_management.html">Project Management</a></li>
@@ -1759,7 +1759,7 @@
 							<div class="col-lg-4 col-md-12">
 								<div class="widget about_content">
 									<div class="brand_logo mb-30">
-										<a href="home_digital_marketing.html" class="brand_link">
+										<a href="home.html" class="brand_link">
 											<img src="assets/images/logo/hashlogo.png" alt="logo_not_found">
 										</a>
 									</div>
@@ -1928,5 +1928,5 @@
 
 	</body>
 
-<!-- Mirrored from droitthemes.com/html/makro/demo/home_digital_marketing.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 21 Jul 2020 18:09:09 GMT -->
+
 </html>
