Virtual Reality Page Done

--- a/Augmented Reality.html
+++ b/Augmented Reality.html
@@ -130,7 +130,7 @@
 										<a href="pricing.html">Services</a>
 										<ul class="submenu">
 											<li><a href="Augmented Reality.html">Augmented Reality</a></li>
-											<li><a href="gallery_fullimage_3_column.html">Virtual Reality</a></li>
+											<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 											<li><a href="gallery_fullimage_4_column.html">Web Development</a></li>
 
 											<li><a href="gallery_fullimage_fullwidth_3_column.html">Mobile App Development</a></li>
@@ -147,8 +147,8 @@
 										</ul>
 									</li>
 									<li class="menu_item_has_child">
-										<a href="pricing.html">Portfolio Grid</a>
-										<ul class="submenu">
+										<a href="pricing.html">Portfolio</a>
+										<!-- <ul class="submenu">
 											<li><a href="gallery_fullimage_2_column.html">Augmented Reality</a></li>
 											<li><a href="gallery_fullimage_3_column.html">Virtual Reality</a></li>
 											<li><a href="gallery_fullimage_4_column.html">Web Development</a></li>
@@ -158,8 +158,8 @@
 
 											<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Version Update</a></li>
-											<!-- <li><a href="gallery_fullimage_masonry_4_column.html">Masonry (4 Column)</a></li> -->
-										</ul>
+											
+										</ul> -->
 									</li>
 
 									
@@ -228,13 +228,13 @@
 							</li>
 
 							<li class="menu_item_has_child">
-								<a href="#portfolio_submenu" data-toggle="collapse" aria-expanded="false">Portfolio Pages</a>
-								<ul class="submenu collapse" id="portfolio_submenu" data-parent="#menu_list">
+								<a href="#portfolio_submenu" data-toggle="collapse" aria-expanded="false">Portfolio</a>
+								<!-- <ul class="submenu collapse" id="portfolio_submenu" data-parent="#menu_list">
 									<li><a href="portfolio_fullimage_2_column.html">Full Image (2 Column)</a></li>
 									<li><a href="portfolio_fullimage_3_column.html">Full Image (3 Column)</a></li>
 									<li><a href="portfolio_fullimage_4_column.html">Full Image (4 Column)</a></li>
 
-									<!-- <li><a href="portfolio_grid_2_column.html">Grid Style (2 Column)</a></li>
+									<li><a href="portfolio_grid_2_column.html">Grid Style (2 Column)</a></li>
 									<li><a href="portfolio_grid_3_column.html">Grid Style (3 Column)</a></li>
 									<li><a href="portfolio_grid_4_column.html">Grid Style (4 Column)</a></li>
 
@@ -254,15 +254,15 @@
 
 									<li><a href="portfolio_details_1.html">Portfolio Details V.1</a></li>
 									<li><a href="portfolio_details_2.html">Portfolio Details V.2</a></li>
-									<li><a href="portfolio_details_3.html">Portfolio Details V.3</a></li> -->
-								</ul>
+									<li><a href="portfolio_details_3.html">Portfolio Details V.3</a></li>
+								</ul> -->
 							</li>
 
 							<li class="menu_item_has_child">
 								<a href="#gallery_submenu" data-toggle="collapse" aria-expanded="false">Services</a>
 								<ul class="submenu collapse" id="gallery_submenu" data-parent="#menu_list">
 									<li><a href="Augmented Reality.html">Augmented Reality</a></li>
-									<li><a href="gallery_fullimage_3_column.html">Virtual Reality</a></li>
+									<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 									<li><a href="gallery_fullimage_4_column.html">Web Development</a></li>
 
 									<li><a href="gallery_grid_2_column.html">Mobile App Development</a></li>
