--- a/home.html
+++ b/home.html
@@ -287,8 +287,8 @@
 									<li class="menu_item_has_child">
 										<a href="pricing.html">Services</a>
 										<ul class="submenu">
-											<li><a href="gallery_fullimage_2_column.html">Augmented Reality</a></li>
-											<li><a href="gallery_fullimage_3_column.html">Virtual Reality</a></li>
+											<li><a href="Augmented Reality.html">Augmented Reality</a></li>
+											<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 											<li><a href="gallery_fullimage_4_column.html">Web Development</a></li>
 
 											<li><a href="gallery_fullimage_fullwidth_3_column.html">Mobile App Development</a></li>
@@ -305,8 +305,8 @@
 										</ul>
 									</li>
 									<li class="menu_item_has_child">
-										<a href="pricing.html">Portfolio Grid</a>
-										<ul class="submenu">
+										<a href="pricing.html">Portfolio</a>
+										<!-- <ul class="submenu">
 											<li><a href="gallery_fullimage_2_column.html">Augmented Reality</a></li>
 											<li><a href="gallery_fullimage_3_column.html">Virtual Reality</a></li>
 											<li><a href="gallery_fullimage_4_column.html">Web Development</a></li>
@@ -316,8 +316,8 @@
 
 											<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Version Update</a></li>
-											<!-- <li><a href="gallery_fullimage_masonry_4_column.html">Masonry (4 Column)</a></li> -->
-										</ul>
+											
+										</ul> -->
 									</li>
 
 									
@@ -445,8 +445,8 @@
 							<li class="menu_item_has_child">
 								<a href="#gallery_submenu" data-toggle="collapse" aria-expanded="false">Services</a>
 								<ul class="submenu collapse" id="gallery_submenu" data-parent="#menu_list">
-									<li><a href="gallery_fullimage_2_column.html">Augmented Reality</a></li>
-									<li><a href="gallery_fullimage_3_column.html">Virtual Reality</a></li>
+									<li><a href="Augmented Reality.html">Augmented Reality</a></li>
+									<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 									<li><a href="gallery_fullimage_4_column.html">Web Development</a></li>
 
 									<li><a href="gallery_grid_2_column.html">Mobile App Development</a></li>
