Web Development add

--- a/Virtual Reality.html
+++ b/Virtual Reality.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<title>Hash Media</title>
-		<link rel="shortcut icon" href="assets/images/logo/1.ico">
+		<link rel="shortcut icon" href="assets/images/logo/Hash Media.ico">
 
 		<!-- css include -->
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -109,8 +109,8 @@
 						<div class="col-lg-2 col-md-12">
 							<div class="brand_logo">
 								<a href="home.html" class="brand_link">
-									<img src="assets/images/logo/logo_2.png" alt="logo_not_found">
-									<img src="assets/images/logo/logo_2.png" alt="logo_not_found">
+									<img src="assets/images/logo/Hash logo.png" alt="logo_not_found">
+									<img src="assets/images/logo/Hash logo.png" alt="logo_not_found">
 								</a>
 								<button type="button" class="menu_btn">
 									<i class="fal fa-bars"></i>
@@ -189,7 +189,7 @@
 
 					<div class="brand_logo mb-50 clearfix">
 						<a href="home.html" class="brand_link">
-							<img src="assets/images/logo/logo_2.png" alt="logo_not_found">
+							<img src="assets/images/logo/Hash logo.png" alt="logo_not_found">
 						</a>
 						<span class="close_btn"><i class="fal fa-times"></i></span>
 					</div>
@@ -526,9 +526,9 @@
 									<div class="item_icon icon_orange">
 										<img src="assets/images/icons/augmented-reality (1).png" alt="">
 									</div>
-									<h3 class="item_title">3D VR <br> Showroom</h3>
+									<h3 class="item_title">VR Training<br> Simulation</h3>
 									<p>
-										We create virtual 3D showrooms to offer enhanced customer experiences. It helps to make faster purchase decisions and eliminates the need to physically visit a showroom.
+										We create virtual training simulation to offer enhanced customer experiences. It helps to make faster purchase decisions and eliminates the need to physically visit a showroom.
 									</p>
 									
 								</div>
@@ -539,7 +539,7 @@
 									<div class="item_icon icon_green">
 										<img src="assets/images/icons/game.png" alt="">
 									</div>
-									<h3 class="item_title">3D VR <br>Games</h3>
+									<h3 class="item_title">VR <br>Games</h3>
 									<p>
 										We create an immersive gaming experience by bringing 3D characters to life through our VR gaming services. We can help to maximize ROI, gain a competitive edge, and market cost-efficiently.
 									</p>
@@ -552,7 +552,7 @@
 									<div class="item_icon icon_purple">
 										<img src="assets/images/icons/360-view.png" alt="">
 									</div>
-									<h3 class="item_title">360<sup>0</sup> Training Videos</h3>
+									<h3 class="item_title">360<sup>0</sup> <br>Videos</h3>
 									<p>
 										With our 360-degree training videos, we can deliver stunning content, promoting user interactivity in new and exciting ways and improving learning experience of the customers.
 									</p>
@@ -1579,7 +1579,7 @@
 								<div class="widget about_content">
 									<div class="brand_logo mb-30">
 										<a href="home.html" class="brand_link">
-											<img src="assets/images/logo/logo_1.png" alt="logo_not_found">
+											<img src="assets/images/logo/Hash logo.png" alt="logo_not_found">
 										</a>
 									</div>
 									<div class="contact_info ul_li_block mb-30">
