Web Development Done

--- a/Virtual Reality.html
+++ b/Virtual Reality.html
@@ -131,7 +131,7 @@
 										<ul class="submenu">
 											<li><a href="Augmented Reality.html">Augmented Reality</a></li>
 											<li><a href="Virtual Reality.html">Virtual Reality</a></li>
-											<li><a href="gallery_fullimage_4_column.html">Web Development</a></li>
+											<li><a href="Web Development.html">Web Development</a></li>
 
 											<li><a href="gallery_fullimage_fullwidth_3_column.html">Mobile App Development</a></li>
 											<li><a href="gallery_fullimage_fullwidth_4_column.html">Multitouch Surfaces</a></li>
@@ -263,7 +263,7 @@
 								<ul class="submenu collapse" id="gallery_submenu" data-parent="#menu_list">
 									<li><a href="Augmented Reality.html">Augmented Reality</a></li>
 									<li><a href="Virtual Reality.html">Virtual Reality</a></li>
-									<li><a href="gallery_fullimage_4_column.html">Web Development</a></li>
+									<li><a href="Web Development.html">Web Development</a></li>
 
 									<li><a href="gallery_grid_2_column.html">Mobile App Development</a></li>
 									<li><a href="gallery_grid_3_column.html">Multitouch Surfaces</a></li>
@@ -870,7 +870,7 @@
 										</span>
 									</div>
 									<h3 class="item_title">
-										<a href="#!">Web Development</a>
+										<a href="Web Development.html">Web Development</a>
 									</h3>
 									<p class="mb-0">
 										It is doubtlessly accepted that in modern era the major success of any organization is depended on the effectiveness of its way of communication with clients and customers.
@@ -1537,12 +1537,12 @@
 						  <li>
 							<h5 align="left">Hardie Lalpura</h5>
 					   </li>
-						<li>
-						   <h6 align="left">E-Mail: <a href="mailto:harshit@hashmedia.in">harshit@hashmedia.in </a></h6>
-						</li>
-						<li>
-						   <h6 align="left">Call: <a href="#">(+91) 987-952-7446</a></h6>
-						 </li>
+					   <li>
+						<h6 align="left">E-Mail: <a href="mailto:hardie@hashmedia.in">hardie@hashmedia.in </a></h6>
+					 </li>
+					 <li>
+						<h6 align="left">Call: <a href="#">(+91) 997-896-3183</a></h6>
+					  </li>
 					  </ul>
 						</div><br><br>
 							</div>
@@ -1611,7 +1611,7 @@
 								<div class="widget useful_links ul_li_block">
 									<h3 class="widget_title mb-50">Services</h3>
 									<ul class="clearfix">
-										<li><a href="home_hr_management.html">Web Development</a></li>
+										<li><a href="Web Development.html">Web Development</a></li>
 										<li><a href="home_payment.html">Multitouch Surfaces</a></li>
 										<li><a href="home_project_management.html">3D Projection Mapping</a></li>
 									</ul>
@@ -1647,7 +1647,7 @@
 							<div class="col-lg-4 col-md-4 col-sm-12">
 								<div class="copyright_text">
 									<p class="mb-0">
-										Copyright © 2020 Desing by <a href="" class="author_link">Mann & Nand</a>
+										Copyright © 2020 Desing by <a href="" class="author_link">Nand & Mann</a>
 									</p>
 								</div>
 							</div>
