Correction of effect

--- a/Web Development.html
+++ b/Web Development.html
@@ -850,10 +850,22 @@
 					<div class="container">
 					<div class="row">
 					<div class="col-xl-6 col-lg-8 col-md-8 offset-md-2 p-sm-0 offset-xl-3 col-12">
-					<div class="section-title text-center">
-					<span>Our Team</span>
-					<h1>Dedicated Team Member</h1>
-					</div> 
+            <div class="section_title text-center mb-80 c_slide_in">
+              <h3 class="sub_title mb-15 c_slide_in_wrap1">
+                <span class="c_slide_in_wrap2">
+                  <span class="c_slide_in_wrap3">
+                    Our Team
+                  </span>
+                </span>
+              </h3>
+              <h2 class="title_text mb-0 c_slide_in_wrap1">
+                <span class="c_slide_in_wrap2">
+                  <span class="c_slide_in_wrap3">
+                    Dedicated Team Member
+                  </span>
+                </span>
+              </h2>
+            </div> 
 					</div>
 					</div>
 					<div class="row d-flex justify-content-center">
