--- a/home.html
+++ b/home.html
@@ -1512,10 +1512,10 @@
 					<div class="container">
 					<div class="row">
 					<div class="col-xl-6 col-lg-8 col-md-8 offset-md-2 p-sm-0 offset-xl-3 col-12">
-					<div class="section-title text-center">
-					<span>Our Team</span>
-					<h1>Dedicated Team Member</h1>
-					</div> 
+						<div class="section_title text-center increase_size mb-80 text_effect_wrap">
+							<h3 class="sub_title mb-15"><span class="text_effect text_effect_bottom">Our Team</span></h3>
+							<h2 class="title_text mb-0"><span class="text_effect text_effect_bottom">Dedicated Team Member</span></h2>
+						</div>
 					</div>
 					</div>
 					<div class="row d-flex justify-content-center">
