--- a/Augmented Reality.html
+++ b/Augmented Reality.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Hash Media</title>
+		<title>Hash Media -Augmented Reality</title>
 		<link rel="shortcut icon" href="assets/images/logo/Hash Media.ico">
 
 		<!-- css include -->
@@ -352,32 +352,32 @@
 					<div class="apps_wrap wrap_left ul_li">
 						<ul class="clearfix">
 							<li data-aos="fade-up" data-aos-delay="200">
-								<a href="#!"><img src="assets/images/icons/android2.png" alt="image_not_found"></a>
+								<a href="#!"><img src="assets/images/icons/google-arcore.png" alt="image_not_found"></a>
 							</li>
 							<li data-aos="fade-up" data-aos-delay="100">
-								<a href="#!"><img src="assets/images/banner/05_digital_marketing/javascript.png" alt="image_not_found"></a>
+								<a href="#!"><img src="assets/images/icons/unity.png" alt="image_not_found"></a>
 							</li>
 							<li data-aos="fade-up" data-aos-delay="100">
-								<a href="#!"><img src="assets/images/banner/05_digital_marketing/python.png" alt="image_not_found"></a>
+								<a href="#!"><img src="assets/images/icons/ArKit.jpg" alt="image_not_found"></a>
 							</li>
 							<li data-aos="fade-up" data-aos-delay="100">
-								<a href="#!"><img src="assets/images/banner/05_digital_marketing/nodejs.png" alt="image_not_found"></a>
+								<a href="#!"><img src="assets/images/icons/vuforia1.jpg" alt="image_not_found"></a>
 							</li>
 						</ul>
 					</div>
 					<div class="apps_wrap wrap_right ul_li">
 						<ul class="clearfix">
 							<li data-aos="fade-up" data-aos-delay="200">
-								<a href="#!"><img src="assets/images/banner/05_digital_marketing/apple.png" alt="image_not_found"></a>
+								<a href="#!"><img src="assets/images/icons/microsoft.png" alt="image_not_found"></a>
 							</li>
 							<li data-aos="fade-up" data-aos-delay="100">
-								<a href="#!"><img src="assets/images/banner/05_digital_marketing/ar-glasses.png" alt="image_not_found"></a>
+								<a href="#!"><img src="assets/images/icons/unreal-engine.png" alt="image_not_found"></a>
 							</li>
 							<li data-aos="fade-up" data-aos-delay="100">
-								<a href="#!"><img src="assets/images/banner/05_digital_marketing/react.png" alt="image_not_found"></a>
+								<a href="#!"><img src="assets/images/icons/snapchat.png" alt="image_not_found"></a>
 							</li>
 							<li data-aos="fade-up" data-aos-delay="100">
-								<a href="#!"><img src="assets/images/banner/05_digital_marketing/angular.png" alt="image_not_found"></a>
+								<a href="#!"><img src="assets/images/icons/Mozilla Mixed reality.svg" alt="image_not_found"></a>
 							</li>
 						</ul>
 					</div>
