--- a/Augmented Reality.html
+++ b/Augmented Reality.html
@@ -133,7 +133,7 @@
 											<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 											<li><a href="Web Development.html">Web Development</a></li>
 
-											<li><a href="gallery_fullimage_fullwidth_3_column.html">Mobile App Development</a></li>
+											<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 											<li><a href="gallery_fullimage_fullwidth_4_column.html">Multitouch Surfaces</a></li>
 
 											<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
@@ -199,7 +199,7 @@
 							We giving you a shiny future to your Business
 						</h3>
 						<p class="mb-30">
-							Our Success Stems From Our Constant Drive To Stay Ahead Of Current Trends & Technology
+							Our Success in the field of AR stems from our rich experience of 10 years.
 						</p>
 						<!-- <div class="btns_group ul_li clearfix">
 							<ul class="clearfix">
@@ -265,7 +265,7 @@
 									<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 									<li><a href="Web Development.html">Web Development</a></li>
 
-									<li><a href="gallery_grid_2_column.html">Mobile App Development</a></li>
+									<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 									<li><a href="gallery_grid_3_column.html">Multitouch Surfaces</a></li>
 									<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
@@ -635,7 +635,7 @@
 							<div class="row align-items-center justify-content-lg-between justify-content-md-center justify-content-sm-center">
 								<div class="col-lg-6 col-md-8 col-sm-9 order-last">
 									<div class="feature_image_7" data-aos="fade-up" data-aos-delay="100">
-										<img src="assets/images/Augmented Reality/snap.png" alt="image_not_found">
+										<img src="assets/images/Augmented Reality/apple.png" alt="image_not_found">
 									</div>
 								</div>
 
@@ -896,7 +896,7 @@
 										</span>
 									</div>
 									<h3 class="item_title">
-										<a href="#!">Mobile App Development</a>
+										<a href="Mobile App Development">Mobile App Development</a>
 									</h3>
 									<p class="mb-0">
 										Android has overtaken iPhone and Android application development market is growing at a rapid pace. If you are looking for outstanding apps for yourself or your clients, then come to us.</p>
@@ -1152,7 +1152,7 @@
 									<a class="item_image" href="case_study_details.html">
 										<img src="assets/images/casestudy/mobile.jpg" alt="image_not_found">
 									</a>
-									<h3 class="item_title"><a href="case_study_details.html">Mobile App Development</a></h3>
+									<h3 class="item_title"><a href="Mobile App Development.html">Mobile App Development</a></h3>
 									<div class="item_category ul_li_center">
 										<ul class="clearfix">
 											<li><a href="#!">Gaming</a></li>
@@ -1598,7 +1598,7 @@
 									<ul class="clearfix">
 										<li><a href="Augmented Reality.html">Augmented Reality</a></li>
 										<li><a href="Virtual Reality.html">Virtual Reality</a></li>
-										<li><a href="home_app_landing.html">Mobile App Development</a></li>
+										<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 										
 									</ul>
 								</div>
