--- a/Web Development.html
+++ b/Web Development.html
@@ -155,7 +155,7 @@
                         <li><a href="Virtual Reality.html">Virtual Reality</a></li>
                         <li><a href="Web Development.html">Web Development</a></li>
   
-                        <li><a href="gallery_fullimage_fullwidth_3_column.html">Mobile App Development</a></li>
+                        <li><a href="Mobile App Development.html">Mobile App Development</a></li>
                         <li><a href="gallery_fullimage_fullwidth_4_column.html">Multitouch Surfaces</a></li>
   
                         <li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
@@ -281,7 +281,7 @@
 									<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 									<li><a href="Web Development.html">Web Development</a></li>
 
-									<li><a href="gallery_grid_2_column.html">Mobile App Development</a></li>
+									<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 									<li><a href="gallery_grid_3_column.html">Multitouch Surfaces</a></li>
 									<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
@@ -1075,7 +1075,7 @@
                 <ul class="clearfix">
                   <li><a href="Augmented Reality.html">Augmented Reality</a></li>
                   <li><a href="Virtual Reality.html">Virtual Reality</a></li>
-                  <li><a href="home_app_landing.html">Mobile App Development</a></li>
+                  <li><a href="Mobile App Development.html">Mobile App Development</a></li>
                   
                 </ul>
               </div>
