--- a/Virtual Reality.html
+++ b/Virtual Reality.html
@@ -133,7 +133,7 @@
 											<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 											<li><a href="Web Development.html">Web Development</a></li>
 
-											<li><a href="gallery_fullimage_fullwidth_3_column.html">Mobile App Development</a></li>
+											<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 											<li><a href="gallery_fullimage_fullwidth_4_column.html">Multitouch Surfaces</a></li>
 
 											<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
@@ -199,7 +199,7 @@
 							We giving you a shiny future to your Business
 						</h3>
 						<p class="mb-30">
-							Our Success Stems From Our Constant Drive To Stay Ahead Of Current Trends & Technology
+							Our Success in the field of VR stems from our rich experience of 10 years.
 						</p>
 						<!-- <div class="btns_group ul_li clearfix">
 							<ul class="clearfix">
@@ -265,7 +265,7 @@
 									<li><a href="Virtual Reality.html">Virtual Reality</a></li>
 									<li><a href="Web Development.html">Web Development</a></li>
 
-									<li><a href="gallery_grid_2_column.html">Mobile App Development</a></li>
+									<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 									<li><a href="gallery_grid_3_column.html">Multitouch Surfaces</a></li>
 									<li><a href="gallery_fullimage_masonry_2_column.html">3D Projection Mapping</a></li>
 											<li><a href="gallery_fullimage_masonry_3_column.html">Game Development</a></li>
@@ -577,7 +577,7 @@
 
 						<div class="section_title text-center mb-30 text_effect_wrap">
 							<h2 class="title_text mb-0">
-								<span class="text_effect text_effect_bottom">Our Success in the field of AR stems from our rich experience of 10 years.</span>
+								<span class="text_effect text_effect_bottom">Our Success in the field of VR stems from our rich experience of 10 years.</span>
 							</h2>
 						</div>
 
@@ -898,7 +898,7 @@
 										</span>
 									</div>
 									<h3 class="item_title">
-										<a href="#!">Mobile App Development</a>
+										<a href="Mobile App Development.html">Mobile App Development</a>
 									</h3>
 									<p class="mb-0">
 										Android has overtaken iPhone and Android application development market is growing at a rapid pace. If you are looking for outstanding apps for yourself or your clients, then come to us.</p>
@@ -1155,7 +1155,7 @@
 									<a class="item_image" href="case_study_details.html">
 										<img src="assets/images/casestudy/mobile.jpg" alt="image_not_found">
 									</a>
-									<h3 class="item_title"><a href="case_study_details.html">Mobile App Development</a></h3>
+									<h3 class="item_title"><a href="Mobile App Development.html">Mobile App Development</a></h3>
 									<div class="item_category ul_li_center">
 										<ul class="clearfix">
 											<li><a href="#!">Gaming</a></li>
@@ -1601,7 +1601,7 @@
 									<ul class="clearfix">
 										<li><a href="Augmented Reality.html">Augmented Reality</a></li>
 										<li><a href="Virtual Reality.html">Virtual Reality</a></li>
-										<li><a href="home_app_landing.html">Mobile App Development</a></li>
+										<li><a href="Mobile App Development.html">Mobile App Development</a></li>
 										
 									</ul>
 								</div>
