Mobile Dev fixed

--- a/Mobile App Development.html
+++ b/Mobile App Development.html
@@ -334,12 +334,12 @@
 				================================================== -->
         <section
           id="banner_section"
-          class="banner_section app_landing_banner deco_wrap text-white d-flex align-items-center mb-30 clearfix"
+          class="banner_section app_landing_banner  text-white d-flex align-items-center mb-30 clearfix"
           data-background="assets/images/banner/02_app_landing/bg_1.png"
         >
           <div class="container">
             <div class="row align-items-center justify-content-lg-between">
-              <div class="col-lg-6 col-md-6 col-6">
+              <div class="col-lg-6 col-md-6 col-6 mobileDesc">
                 <div class="banner_content c_slide_in">
                   <h1 class="title_text mb-30 c_slide_in_wrap1">
                     <span class="c_slide_in_wrap2">
@@ -375,7 +375,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-5 col-md-5 col-5">
+              <div class="col-lg-5 col-md-5 col-5 mobileThumbs">
                 <div class="banner_image scene">
                   <div class="phone_1">
                     <div class="layer" data-depth="0.3">
